--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -19,6 +19,13 @@ body {
     font-family: var(--default-font-family);
 }
 
+@media screen and (min-width: 800px) {
+    body {
+        padding-left: calc((100% - 800px)/2);
+        padding-right: calc((100% - 800px)/2);
+    }
+}
+
 .container {
     padding-left: 0.750rem;
     padding-right: 0.750rem;
@@ -27,24 +34,22 @@ body {
 .social_stack {
     color: var(--default-grey-light-color);
     font-weight: bold;
-    font-size: 0.8625rem;
+    font-size: 1rem;
+}
+
+.social_stack__item {
+    display: flex;
+    align-items: center;
+    font-size: 0.750rem;
+    margin-bottom: 0.875rem;
 }
 
 .social_stack__item::before {
     content: "";
-}
-
-.social_stack__item-insta::before {
-    content: url(../img/instagram-ico.svg);
-
-}
-
-.social_stack__item-mail::before {
-    content: url(../img/mail-ico.svg);
-
-}
-
-.social_stack__item-whats::before {
-    content: url(../img/whatsapp-logo_icon-icons.com_57054\ 1.svg);
-
+    margin-right: 0.750rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    background-size: 1.5rem;
+    background-repeat: no-repeat;
+    background-position: center;
 }
