--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,5 +1,7 @@
 .footer {
     background-color: var(--default-color);
+    padding-bottom: 1.5rem;
+    padding-top: 1.5rem;
 }
 
 .footer__logo {
@@ -8,4 +10,18 @@
     background-position: center;
     background-size: contain;
     height: 60px;
+    margin-top: 3rem;
+}
+
+.footer__copy {
+    font-size: 0.875rem;
+    color: var(--default-intermediate-color);
+    text-align: center;
+    font-weight: 400;
+    margin-top: 1.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.footer__copy > span {
+    font-family: var(--material-font-family);
 }
