--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -25,3 +25,16 @@
 .footer__copy > span {
     font-family: var(--material-font-family);
 }
+
+.social_stack__item-insta::before {
+    background-image: url("../img/instagram-ico.svg");
+}
+
+.social_stack__item-mail::before {
+    background-image: url("../img/mail-ico.svg");
+
+}
+
+.social_stack__item-whats::before {
+    background-image: url("../img/whatsapp-logo_icon-icons.com.svg");
+}
