--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -10,6 +10,8 @@
     --default-grey-intermediate-color: #D9D9D9;
     --default-grey-light-color: #FAFAFA;
 
+    --default-box-shadow-color: rgba(0, 0, 0, 0.1);
+
     --default-font-family: 'Quicksand', sans-serif;
     --material-font-family: 'Material Icons';
 }
@@ -18,6 +20,10 @@ body {
     color: var(--default-color);
     background-color: var(--default-grey-light-color);
     font-family: var(--default-font-family);
+}
+
+strong {
+    font-weight: bold;
 }
 
 @media screen and (min-width: 800px) {
