--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,7 +1,7 @@
 .footer {
     background-color: var(--default-color);
-    padding-bottom: 1.5rem;
-    padding-top: 1.5rem;
+    padding-bottom: 12px;
+    padding-top: 12px;
 }
 
 .footer__logo {
@@ -10,7 +10,6 @@
     background-position: center;
     background-size: contain;
     height: 60px;
-    margin-top: 3rem;
 }
 
 .footer__copy {
@@ -18,8 +17,6 @@
     color: var(--default-intermediate-color);
     text-align: center;
     font-weight: 400;
-    margin-top: 1.5rem;
-    margin-bottom: 100rem;
 }
 
 .footer__copy > span {
